[gd_scene load_steps=4 format=3 uid="uid://df6m5kvxq2bo2"]

[ext_resource type="Script" uid="uid://dot2su2csl0xv" path="res://scripts/bull_hud.gd" id="1_xrql8"]
[ext_resource type="Texture2D" uid="uid://ofwny4yeof45" path="res://assets/sprites/bar.png" id="2_fs7sa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xrql8"]
bg_color = Color(0.98039216, 1, 0.8784314, 1)

[node name="BullHUD" type="CanvasLayer"]
script = ExtResource("1_xrql8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(256, 0)
offset_top = -22.0
offset_right = 256.0
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xrql8")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="EnergyBar" type="TextureProgressBar" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
value = 100.0
nine_patch_stretch = true
stretch_margin_left = 2
stretch_margin_top = 2
stretch_margin_right = 2
stretch_margin_bottom = 2
texture_progress = ExtResource("2_fs7sa")
tint_progress = Color(0.6901961, 0, 0.38039216, 1)

[node name="FrustrationBar" type="TextureProgressBar" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 4)
layout_mode = 2
nine_patch_stretch = true
stretch_margin_left = 2
stretch_margin_top = 2
stretch_margin_right = 2
stretch_margin_bottom = 2
texture_progress = ExtResource("2_fs7sa")
tint_progress = Color(0.8980392, 0.67058825, 0.05490196, 1)

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
color = Color(0.6901961, 0, 0.38039216, 1)
